fix: fix overflow issue on mobile view

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 
 * {
     box-sizing: border-box;
+    margin: 0;
 }
 
 body {
@@ -111,16 +112,37 @@ h1 {
 
 /* MOBILE STYLES */
 @media (max-width: 568px) {
+    
+    
+
+
+
+    
     h1 {
         margin-top: 0;
         font-size: 1rem;
         text-align: center;
     }
 
+    body {
+        height: 90vh;
+    }
+
+    main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: start;
+        margin: 0;
+        height: 100%;
+        backdrop-filter: blur(10px);
+    }
+    
+
     .container {
-        width: 90vw;
-        height: 80vh;
-        box-shadow: 0 0 15px#4141268f;
+        width: 95%;
+        height: 90%;
+        box-shadow: 0 0 10px#4141268f;
         margin-bottom: auto;
         border-radius: 8px;
     }
